# truck-facto-rs

./: .gitignore  Cargo.toml  Readme.md
src/: doa.rs  file.rs  gini.rs  git.rs  lib.rs  main.rs  tf.rs
