[package]
name = "truck-facto-rs"
version = "0.1.1"
edition = "2024"
description = "A high-performance Rust implementation of the Truck-Factor algorithm for Git repositories."
license = "MIT"

[dependencies]
levenshtein = "1.0.5"
linguist = "0.1.9"
chrono = { version = "0.4", optional = true }

[features]
decay = ["chrono"]
chrono = ["dep:chrono"]
